--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 Django==5.0.8
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-psycopg2-binary==2.9.9
+# psycopg2-binary==2.9.9
 drf-yasg==1.21.10
 python-decouple==3.8
 django-cors-headers==4.3.1
